# Server-C

./: CMakeLists.txt  README.md
include/: authentication.h  connectionHandler.h  userManager.h
src/: authentication.cpp  connectionHandler.cpp  main.cpp  userManager.cpp
src/authentication/: authentication.cpp  connectionHandler.cpp
